# RAG

./: .gitignore  RAG.ipynb  context_processor.py  dataset.ipynb  dataset_setup.py  evaluate_with_ragas.py  finetuning_embedding.ipynb  generate_using_llm.ipynb  mock_data.csv  pyproject.toml  queries_corpus.json  queries_corpus_120.json  ragas_eval.py
.ipynb_checkpoints/: RAG-checkpoint.ipynb
data/: queries_corpus.json  ragas_wiki.json
data/.ipynb_checkpoints/: context-checkpoint.json
output/: temp.csv
src/dataset_layer/: dataset_load.py  dataset_setup.py
src/query_analysis_layer/: __init__.py  agents.py  graph.py  prompts.py  query_model.py  state_definition.py
src/rag/: __init__.py  context_processor.py  fine_tune.py  generation.py  rag.py
src/rag_pipeline/: main.py
src/ragas_layer/: __init__.py  ragas_eval.py
